# ot-harjoitustyo

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md  tehtava3.md  tehtava4.md  tehtävä4.md
towerdefence/: .coveragerc  .gitignore  .pylintrc  pyproject.toml  tasks.py  test_map.txt
towerdefence/src/: bullet.py  clock.py  confirmation_screen.py  defender.py  defender_data.py  game.py  game_ui.py  index.py  map.py  map_editor.py  map_utils.py  menu.py  sound.py  sprite_utils.py  stage.py  statics.py  wave_data.py
towerdefence/src/maps/: map1.json  test_map.json
towerdefence/src/sprites/: bullet.py  button.py  defender.py  enemy.py  map.py  tile.py
towerdefence/src/tests/: enemy_test.py  map_test.py
towerdefence/src/utils/: asset_utils.py  editor_utils.py  map_utils.py  sprite_utils.py  text_utils.py
